# jari

./: .gitignore  README.md  pyproject.toml
jari/: __init__.py  cli.py  command.py  core.py  jari.py  models.py
tests/: test_cli_e2e.py
