[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jari"
version = "0.1.0"
description = "Task/issue tracker for LLM agent workflows with conflict detection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Nourdine Lotfi", email = "secemp9@gmail.com" }
]
keywords = [
    "task-tracker",
    "issue-tracker",
    "llm",
    "agents",
    "collaboration",
    "conflict-resolution",
    "multi-agent",
    "claude",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Bug Tracking",
]
dependencies = [
    "lmdb>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
jari = "jari.cli:main"

[project.urls]
Homepage = "https://github.com/secemp9/jari"
Repository = "https://github.com/secemp9/jari"
Issues = "https://github.com/secemp9/jari/issues"

[tool.hatch.build.targets.wheel]
packages = ["jari"]

[tool.hatch.build.targets.sdist]
include = [
    "/jari",
    "/README.md",
    "/LICENSE",
]
